--- a/css/style.css
+++ b/css/style.css
@@ -127,3 +127,26 @@
     font-weight: 300;
     line-height: 28px;
 }
+
+.galery {
+    width: 1366px;
+    margin-top: 70px;
+}
+
+.galery__title {
+    color: #000000;
+    font-family: "Fira Sans Medium";
+    font-size: 42px;
+    font-weight: 500;
+    padding-bottom: 35px;
+}
+.galery__row{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.galery__row_item{
+    width: 425px;
+    height: 200px;
+    background-image: url('../img/picture.png');
+}
