--- a/main.pug
+++ b/main.pug
@@ -3,6 +3,12 @@ html
     head
         meta(charset="utf-8")
         title front_1
+        //- script(src="//code.jquery.com/jquery-3.3.1.min.js")
+        //- script(src="plugins/jquery.fancybox.min.js")
+        script(src="js/main.js")
+        
+
+        link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.css")
         link(rel="stylesheet", href="css/style.css")
         link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400")
     body
@@ -67,6 +73,6 @@ html
         .galery.center__screen
             .galery__title Галерея
             .galery__row
-                .galery__row_item
+                .galery__row_item.picture
                 .galery__row_item
                 .galery__row_item
