--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,30 @@
 /* @import '../plugins/jquery.fancybox.css'; */
-
 * {
     padding: 0;
     margin: 0;
+}
+
+.title {
+    color: #000000;
+    font-family: "Fira Sans Medium";
+    font-size: 42px;
+    font-weight: 500;
+    padding-bottom: 35px;
+}
+
+.button {
+    color: white;
+    width: 163px;
+    height: 50px;
+    border-radius: 3px;
+    background-color: #e73741;
+    line-height: 50px;
+    font-size: 18px;
+    border: none;
+}
+
+.button:hover {
+    cursor: pointer;
 }
 
 .center__screen {
@@ -142,24 +164,66 @@
     font-weight: 500;
     padding-bottom: 35px;
 }
+
 /* .galery__row,.imglist{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
 } */
-.galery a{
+.galery a {
     padding-left: 15px;
-    padding-right: 15px; 
+    padding-right: 15px;
 }
+
 /* .galery__row_item{
     width: 425px;
     height: 200px;
     background-image: url('../img/picture.png');
 } */
-
-.slick-arrow{
+.slick-arrow {
     width: 20px;
     height: 20px;
     border-radius: 50%;
     background-color: green;
+}
+
+.form {
+    padding-top: 70px;
+    max-width: 426px;
+}
+
+.form__input {
+    width: 426px;
+    height: 40px;
+    border-radius: 3px;
+    border: 1px solid #bdbdbd;
+    background-color: #ffffff;
+    margin-bottom: 20px;
+    padding-left: 15px;
+    color: #000000;
+    font-family: "Fira Sans Light";
+    font-size: 16px;
+    font-weight: 300;
+}
+
+.form__input-textarea {
+    margin-bottom: 30px;
+    padding-top: 10px;
+    height: 150px;
+    /* line-height: 20px; */
+    resize: none;
+}
+
+.button__form-button{
+    margin-bottom: 70px;
+}
+
+.footer{
+    width: 1366px;
+
+}
+
+.footer__hr{
+    height: 1px;
+    background-color: #e0e0e0;
 }
