--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,11 @@
 /* @import '../plugins/jquery.fancybox.css'; */
-
 * {
     padding: 0;
     margin: 0;
+}
+
+.container {
+    max-width: 1366px;
 }
 
 .title {
@@ -34,21 +37,26 @@
 }
 
 .header {
-    width: 1366px;
+    /* max-width: 1366px; */
     height: 70px;
     text-align: center;
+    display: flex;
+    justify-content: space-between;
 }
 
 .header__margin {
-    margin: 10px 15px;
+    /* margin: 10px 15px; */
+    /* padding-top: 10px; */
+    margin-top: 10px;
 }
 
 .logo {
-    float: left;
+    /* float: left; */
     width: 150px;
     height: 50px;
     background-image: url('../img/logo.png');
     background-repeat: no-repeat;
+    margin-left: 15px;
 }
 
 .btn_login {
@@ -59,20 +67,23 @@
     background-color: #e73741;
     line-height: 50px;
     font-size: 18px;
-    float: right;
+    /* float: right; */
+    margin-right: 15px;
 }
 
 .front {
     background-image: url('../img/front__bg.png');
     background-position: 0px -65px;
     background-repeat: no-repeat;
-    width: 1366px;
+    /* width: 1366px; */
     height: 700px;
+    display: flex;
+    flex-direction: column;
 }
 
 .front__title {
-    width: 597px;
-    height: 90px;
+    /* max-width: 597px; */
+    /* height: 90px; */
     padding-top: 269px;
     color: #000000;
     font-family: "Fira Sans Medium";
@@ -85,12 +96,12 @@
     color: #000000;
     font-family: "Fira Sans";
     font-size: 18px;
-    line-height: 30px;
+    /* line-height: 30px; */
 }
 
 .cards {
     margin-top: 30px;
-    width: 1366px;
+    /* width: 1366px; */
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -100,7 +111,7 @@
 }
 
 .cards__card {
-    width: 425px;
+    max-width: 425px;
     margin-top: 30px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.18);
     border-radius: 3px;
@@ -154,7 +165,7 @@
 }
 
 .galery {
-    width: 1366px;
+    /* width: 1366px; */
     margin-top: 70px;
 }
 
@@ -171,18 +182,22 @@
     flex-wrap: wrap;
     justify-content: space-around;
 } */
-
+.galery__row .single-item {
+    max-width: 425px;
+    margin: 0 auto;     
+}
 .galery a {
     padding-left: 15px;
     padding-right: 15px;
-}
+     /* max-width: 500px; 
+     margin: 0 auto; */
+} 
 
-/* .galery__row_item{
+ /* .galery__row_item{
     width: 425px;
     height: 200px;
     background-image: url('../img/picture.png');
-} */
-
+}  */
 .slick-arrow {
     width: 20px;
     height: 20px;
@@ -196,7 +211,7 @@
 }
 
 .form__input {
-    width: 426px;
+    min-width: 426px;
     height: 40px;
     border-radius: 3px;
     border: 1px solid #bdbdbd;
@@ -222,7 +237,7 @@
 }
 
 .footer {
-    max-width: 1366px;
+    /* max-width: 1366px; */
 }
 
 .footer__hr {
@@ -233,7 +248,6 @@
 /* .footer__nav{
     max-width: 1336px;
 } */
-
 .footer__nav {
     display: flex;
     flex-wrap: wrap;
@@ -281,4 +295,36 @@
     font-size: 18px;
     font-weight: 300;
     padding-bottom: 22px;
+}
+
+@media screen and (max-width: 1000px) {
+    .footer__nav {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .footer__icons {
+        padding-top: 40px;
+    }
+    .footer__icon {
+        margin-left: 20px;
+    }
+    .footer__copyright {
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .form__input {
+        min-width: 350px;
+    }
+}
+@media screen and (max-width: 480px) {
+    .cards__card {
+        max-width: 380px;
+    }
+    .cards__card_img {
+        max-width: 380px;
+    }
 }
